--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,6 @@
 # syntax check, unit test, profiling
 flake8>=3.8.4
-pytest>=6.1.2
-# package mgmnt
-# twine>=3.2.0
+pytest>=6.2.1
+twine==3.3.0
+pypandoc>=1.5
+wheel>=0.31.0
